Fix symbol error